# stdnn-ops

./: .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README  README.md  RFC  configure  i  q
auto/: cmake
benchmarks/: bench_activation.cpp  bench_bias.cpp  bench_blas.cpp  bench_conv.cpp  bench_elementary.cpp  bench_im2col.cpp  bench_pool.cpp  benchmark.hpp  common.hpp
cmake/: Findstdtensor.cmake  Findstdtracer.cmake  benchmarks.cmake  blas.cmake  examples.cmake  gtest.cmake  package.cmake  tests.cmake
doc/: .gitignore  Makefile  linear-sample.tex  nn.tex
examples/: CMakeLists.txt  example-c-api.c  example_1.cpp  example_build_mnist_cnn_model.cpp  example_build_mnist_slp_model.cpp  example_layer_mlp.cpp  example_layer_vgg16.cpp  example_mlp.cpp  example_mnist.cpp  example_model_plain34.cpp  example_model_plain50.cpp  example_model_vgg16.cpp  example_openpose_plus_hao28.cpp  example_openpose_plus_hao28.hpp  example_ops.cpp  example_train_mnist_slp.cpp  example_vgg16.cpp  imread.hpp  model_builder.hpp  trace.hpp  utils.hpp  vgg16_common.hpp
include/experimental/: contract  new_type  range
include/experimental/bits/: contract.hpp  new_type.hpp  range.hpp
include/nn/: common.hpp  concepts.hpp  layers  models  nn  ops  ops-experimental.h  ops.hpp  traits
include/nn/bits/engines/: cblas_impl.hpp  config.hpp  linag.hpp  plain_impl.hpp
include/nn/bits/layers/: activation.hpp  bn.hpp  call.hpp  concat.hpp  conv.hpp  dense.hpp  elementary.hpp  layer.hpp  loss.hpp  pool.hpp  reshape.hpp
include/nn/bits/models/: namescope.hpp  sequential.hpp
include/nn/bits/ops/: add.hpp  axpy.hpp  bias.hpp  bn.hpp  col2im.hpp  col2im1d.hpp  combinators.hpp  concat.hpp  conv.hpp  conv1d.hpp  conv2d.hpp  elementary.hpp  hash.hpp  im2col.hpp  im2col1d.hpp  init.hpp  io.hpp  io_tar.hpp  linear_sample.hpp  matmul.hpp  pointwise.hpp  pool.hpp  read.hpp  reduce.hpp  reshape.hpp  shape_algo.hpp  softmax.hpp  summary.hpp  top.hpp  traits.hpp  transpose.hpp  utility.hpp  xentropy.hpp
include/nn/bits/ops/gradients/: add.hpp  bias.hpp  conv.hpp  conv2d.hpp  matmul.hpp  mul.hpp  reshape.hpp  softmax.hpp  xentropy.hpp
include/nn/bits/ops/impl/: col2im1d.hpp  conv1d.hpp  conv2d.hpp  im2col1d.hpp
include/nn/bits/traits/: basic_traits.hpp  filter.hpp  linear_sample.hpp  multi_linear_sample.hpp  padding.hpp  trait_algo.hpp
include/nn/experimental/: datasets
include/nn/experimental/bits/datasets/: mnist.hpp
include/nn/experimental/bits/ops/: utility.hpp
include/nn/experimental/bits/ops/grad/: add.hpp  bias.hpp  conv.hpp  matmul.hpp  mul.hpp  softmax.hpp  xentropy.hpp
include/ttl/nn/: common.hpp  layers  models  nn  ops  ops.hpp  traits
include/ttl/nn/bits/engines/: builtin.hpp  cblas_impl.hpp  config.hpp  eigen_impl.hpp  linag.hpp  plain_impl.hpp
include/ttl/nn/bits/kernels/: activation.hpp  bias.hpp  blas.hpp  concat.hpp  conv.hpp  elementary.hpp  hash.hpp  init.hpp  io.hpp  loss.hpp  normalization.hpp  pool.hpp  reduce.hpp  utility.hpp
include/ttl/nn/bits/kernels/cpu/: activation.hpp  bias.hpp  blas.hpp  col2im.hpp  concat.hpp  conv2d.hpp  elementary.hpp  hash.hpp  im2col.hpp  init.hpp  io.hpp  loss.hpp  normalization.hpp  pool.hpp  reduce.hpp  utility.hpp
include/ttl/nn/bits/layers/: activation.hpp  bn.hpp  call.hpp  concat.hpp  conv.hpp  dense.hpp  elementary.hpp  layer.hpp  loss.hpp  pool.hpp
include/ttl/nn/bits/models/: namescope.hpp  sequential.hpp
include/ttl/nn/bits/ops/: activation.hpp  axpy.hpp  bias.hpp  blas.hpp  bn.hpp  col2im.hpp  col2im1d.hpp  combinators.hpp  concat.hpp  conv1d.hpp  conv2d.hpp  conv2d_trait.hpp  elementary.hpp  hash.hpp  im2col.hpp  im2col1d.hpp  init.hpp  io.hpp  io_tar.hpp  loss.hpp  matmul.hpp  noop.hpp  pointwise.hpp  pool.hpp  pool2d_trait.hpp  reduce.hpp  reshape.hpp  shape_algo.hpp  softmax.hpp  std_function.hpp  summary.hpp  top.hpp  transpose.hpp  utility.hpp  xentropy.hpp
include/ttl/nn/bits/ops/gradients/: activation.hpp  add.hpp  bias.hpp  conv2d.hpp  matmul.hpp  mul.hpp  reshape.hpp  softmax.hpp  xentropy.hpp
include/ttl/nn/bits/ops/impl/: col2im1d.hpp  conv1d.hpp  conv2d.hpp  im2col1d.hpp
include/ttl/nn/bits/traits/: basic_traits.hpp  conv_traits.hpp  filter.hpp  linear_sample.hpp  multi_linear_sample.hpp  padding.hpp  pool_traits.hpp  trait_algo.hpp
include/ttl/nn/experimental/: datasets  functional  gradients
include/ttl/nn/experimental/bits/datasets/: mnist.hpp
include/ttl/nn/kernels/: cpu
src/nn/: ops.cpp
tests/: _test_loc.cpp  bench_im2col.cpp  bench_pool.cpp  build_info.hpp  main.cpp  test_activation.cpp  test_add.cpp  test_affine_grad.cpp  test_axpy.cpp  test_bias.cpp  test_bias_grad.cpp  test_col2im.cpp  test_concat.cpp  test_constructors.cpp  test_conv.cpp  test_conv1d.cpp  test_conv_grad.cpp  test_functional.cpp  test_grad_shape.cpp  test_hash.cpp  test_im2col.cpp  test_include.Makefile  test_include_ttl_nn_experimental_gradient.cpp  test_include_ttl_nn_kernels_cpu.cpp  test_init.cpp  test_io.cpp  test_layer_constructors.cpp  test_layers.cpp  test_linag.cpp  test_linear_sample.cpp  test_linear_sample_trait.cpp  test_loc.cpp  test_namescope.cpp  test_plain_la_engine.cpp  test_pointwise.cpp  test_pool.cpp  test_public_ops.cpp  test_reduce.cpp  test_reshape.cpp  test_softmax.cpp  (+7 more)
tests/include/nn/: testing
tests/include/nn/bits/: testing.hpp
tests/include/ttl/experimental/: show
tests/include/ttl/experimental/bits/: show.hpp
tests/include/ttl/nn/: testing
tests/include/ttl/nn/bits/: testing.hpp
