CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
PROJECT(libnn)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

FIND_PACKAGE(stdtensor REQUIRED)

FIND_PROGRAM(CLANG_TIDY_EXE NAMES "clang-tidy")
IF(CLANG_TIDY_EXE)
    SET(CMAKE_CXX_CLANG_TIDY clang-tidy)
ENDIF()

ADD_DEFINITIONS(-Wall)
ADD_DEFINITIONS(-Werror)
ADD_DEFINITIONS(-Wfatal-errors)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/3rdparty/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/3rdparty/lib)

OPTION(USE_OPT "Turn on optimization flags." OFF)
OPTION(USE_OPENBLAS "Build with blas." OFF)
OPTION(USE_OPENCV "Build with opencv." OFF)
OPTION(BUILD_TESTS "Build tests." OFF)
OPTION(BUILD_BENCHMARKS "Build benchmarks." OFF)
OPTION(BUILD_EXAMPLES "Build examples." ON)
OPTION(BUILD_PACKAGES "Build release packages." OFF)
OPTION(TRACE_EXAMPLES "Enable trace for examples." ON)

IF(USE_OPT)
    ADD_DEFINITIONS(-ffast-math)
ENDIF()

IF(BUILD_TESTS)
    ENABLE_TESTING()
    INCLUDE(cmake/tests.cmake)
ENDIF()

IF(BUILD_BENCHMARKS)
    INCLUDE(cmake/benchmarks.cmake)
ENDIF()

IF(USE_OPENBLAS)
    MESSAGE("Using OpenBLAS")
    # https://cmake.org/cmake/help/v3.0/module/FindBLAS.html
    SET(BLA_VENDOR "OpenBLAS")
    FIND_PACKAGE(BLAS REQUIRED)
    ADD_DEFINITIONS(-DSTDNN_OPS_HAVE_CBLAS)
    INCLUDE_DIRECTORIES(${OpenBLAS_INCLUDE_DIRS})
ENDIF()

IF(USE_OPENCV)
    FIND_PACKAGE(OpenCV REQUIRED)
ENDIF()

IF(BUILD_EXAMPLES)
    ADD_SUBDIRECTORY(examples)
ENDIF()

INSTALL(DIRECTORY include DESTINATION .)

IF(BUILD_PACKAGES)
    INCLUDE(cmake/package.cmake)
ENDIF()
